--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FamilyGuardNew",
+  "name": "family-guard-new",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,10 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-firebase/app": "^23.4.1",
+    "@react-native-firebase/auth": "^23.4.1",
+    "@react-native-firebase/firestore": "^23.4.1",
+    "@react-native/new-app-screen": "0.82.1",
+    "lucide-react-native": "^0.548.0",
     "react": "19.1.1",
     "react-native": "0.82.1",
-    "@react-native/new-app-screen": "0.82.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-background-timer": "^2.4.1",
+    "react-native-device-info": "^14.1.1",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
